# FLIR_monocam_control

./: .gitignore  README.md
calibration/: flir_camera_info.yaml
calibration/extrinsics/: rig.yaml
scripts/: setup_flir_env.bash
src/flir_camera_calibration/: CMakeLists.txt  README.md  package.xml
src/flir_camera_calibration/config/: calibration.yaml
src/flir_camera_calibration/launch/: calibration.launch.py
src/flir_camera_calibration/src/: flir_camera_calibration_node.cpp
src/flir_camera_undistort_viewer/: CMakeLists.txt  README.md  package.xml
src/flir_camera_undistort_viewer/config/: undistort_viewer.yaml
src/flir_camera_undistort_viewer/launch/: undistort_viewer.launch.py
src/flir_camera_undistort_viewer/src/: flir_camera_undistort_viewer_node.cpp
src/flir_spinnaker_camera/: CMakeLists.txt  README.md  package.xml
src/flir_spinnaker_camera/config/: flir_camera.yaml  flir_cameras.yaml
src/flir_spinnaker_camera/launch/: flir_camera.launch.py  flir_multi_camera.launch.py
src/flir_spinnaker_camera/msg/: FlirMetadata.msg
src/flir_spinnaker_camera/src/: flir_spinnaker_camera_node.cpp
